Trocou o contato de Alexandre Rocha e Paulo Victor de Mesquita
Paulo Victor de Mesquita
aepdemesquita@gmail.com

(84) 98745-8834

Rua Amélia Galvão, nº90. Lagoa do Mato, Mossoró-RN

Alexandre Rocha

Rua cel Silvino Bezerra 1274, lagoa seca, Natal/RN CEP:59031140

+55 84 8827-7007

fleuder@hotmail.com

FALTANDO EMAIL DE FABIO HENRIQUE DE MATOS – MT

fhmatosrepresentacoes@gmail.com

Edson Bispo de SP
No endereço a sala correta é a sala 1013

INSERIR EM GOIAIS
Cordimar Braga de Azevedo

Cond. Empresarial Miguel Seabra Fagundes, Sala 804, Rua Paulo Barros de Góes, 1840, Lagoa Nova, Natal, RN, CEP: 59064-460

cordimar.braga@grupofan.com

(84) 98188-0020

--- a/mapas.html
+++ b/mapas.html
@@ -748,7 +748,7 @@
         if (uf === 'mt') { html = 'do Mato Grosso'; 
                            rep_nome[0] = 'Fabio Henrique de Matos';
                            rep_local[0] = 'R. Trinta e Quatro (S Cruz II), 442 - Quadra 78 LT A3 - Bairro: Santa Cruz II - CEP: 78077-020 Cuiabá - MT';
-                           rep_email[0] = 'N/A';
+                           rep_email[0] = 'fhmatosrepresentacoes@gmail.com';
                            rep_telefone[0] = '(65) 99251-5818'
                            rep_nome[1] = 'Thámerson Alves lima de Jesus';
                            rep_local[1] = 'R. São João N: 245. Centro São João de Iracema CEP: 15315-000';
@@ -809,7 +809,7 @@
                            rep_email[1] = 'cristiane.medeiros2@icloud.com';
                            rep_telefone[1] = '(17) 99741-3370'; 
                            rep_nome[2] = 'Edson Bispo';
-                           rep_local[2] = 'Alameda Terracota 215 - 5º andar - Conjuntos 518/519 - SALA 16 Bairro Cerâmica - São Caetano do Sul - SP';
+                           rep_local[2] = 'Alameda Terracota 215 - 5º andar - Conjuntos 518/519 - SALA 1013 Bairro Cerâmica - São Caetano do Sul - SP';
                            rep_email[2] = 'edson1bispo@gmail.com';
                            rep_telefone[2] = '(11) 95144-4550'
                            rep_nome[3] = 'Giovanni Nicoletti';
@@ -831,7 +831,12 @@
                            rep_email[2] = 'salatielmeta@hotmail.com';
                            rep_telefone[2] = '(66) 99255-2080 | (66) 99914-7711 | (82) 98877-0522'; 
         }
-        if (uf === 'go') { html = 'de Goiás'; }
+        if (uf === 'go') { html = 'de Goiás'; 
+                           rep_nome[0] = 'Cordimar Braga de Azevedo ';
+                           rep_local[0] = 'Cond. Empresarial Miguel Seabra Fagundes, Sala 804, Rua Paulo Barros de Góes, 1840, Lagoa Nova, Natal, RN, CEP: 59064-460 ';
+                           rep_email[0] = 'cordimar.braga@grupofan.com';
+                           rep_telefone[0] = '(84) 98188-0020';
+        }
         if (uf === 'mg') { html = 'de Minas Gerais'; 
                            rep_nome[0] = 'Andressa Ribeiro de Novaes';
                            rep_local[0] = 'R. Luiz Gonzaga, Loteamento São Paulo, Barreiras CEP 47807-067';
@@ -889,13 +894,13 @@
                            rep_email[0] = 'doisb.distribuidora@hotmail.com';
                            rep_telefone[0] = '(84) 99942-2228'; 
                            rep_nome[1] = 'Paulo Victor de Mesquita';
-                           rep_local[1] = 'R. cel. Silvino Bezerra, 1274, Lagoa Seca, Natal RN';
-                           rep_email[1] = 'fleuder@hotmail.com';
-                           rep_telefone[1] = '84 98827-7007'; 
+                           rep_local[1] = 'R. Amélia Galvão, nº90. Lagoa do Mato, Mossoró-RN ';
+                           rep_email[1] = 'aepdemesquita@gmail.com ';
+                           rep_telefone[1] = '(84) 98745-8834'; 
                            rep_nome[2] = 'Alexandre Rocha';
-                           rep_local[2] = 'R. Amendoeira, 999 apto 201, Nova Parnamirim';
-                           rep_email[2] = 'eliorefesaldanha@icloud.com';
-                           rep_telefone[2] = '(84) 99803-2909'; 
+                           rep_local[2] = 'R. Cel Silvino Bezerra 1274, Lagoa Seca, Natal/RN CEP: 59031-140';
+                           rep_email[2] = 'fleuder@hotmail.com';
+                           rep_telefone[2] = '(84) 98827-7007'; 
                            rep_nome[3] = 'Alberto Alves Rodrigues';
                            rep_local[3] = 'R. Joaquim Nabuco 806, Mossoró CEP: 59600-300';
                            rep_email[3] = 'alberto.a.rodrigues2013@gmail.com';
