Palavras escritas erradas no texto: dinâmica espaços

--- a/soninho.html
+++ b/soninho.html
@@ -199,11 +199,11 @@
                 de ferramentas lúdicas e brincadeiras, as crianças desenvolvem 
                 mais facilmante habilidades básicas e essenciais, sendo esse 
                 processo aliado ao aprendizado de novos assuntos guiados pelo 
-                professor. Toda essa dinãmica leva a gasto maior de energia pro 
+                professor. Toda essa dinâmica leva a gasto maior de energia pro 
                 parte das crainças, acarretando na necessidade daquela "sonequinha 
                 renovadora" em algum horário do dia, essencial para melhoria do 
                 seu rendimento nas atividades diárias. Dessa forma, procurando 
-                aproveitar os espaçoes e oferecer conforto e acolhimento para as 
+                aproveitar os espaços e oferecer conforto e acolhimento para as 
                 crianças dentro do processor pedagógico das instituiçoes, criamos 
                 o programa "O soninho do Bebê".
               </p>
