palavra escrita errada:
baseia

--- a/pilares.html
+++ b/pilares.html
@@ -203,7 +203,7 @@
                 voz às dúvidas e a sua visão de mundo, alcançando o plano 
                 desenvolvimento do educador e convidando o jovem a se aventurar 
                 no mundo dos livros. Toda a Organização pedagógica do projeto 
-                se basei no desenvolvimento de habilidades que compõem os 4 
+                se baseia no desenvolvimento de habilidades que compõem os 4 
                 pilares da educação: Aprender, Fazer, Ser e Conviver.             
                </p>
               <p class="fs-5 text-primary mb-4">
